2019-12-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl.c (pkl_ice): Use an hyperlink for the bug report
	address.
	* src/pkl-asm.c (pkl_asm_catch): Remove obsolete comment.
	* src/pkl-env.c (pkl_env_dup_toplevel): Likewise.

2019-12-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-insn.def: New instruction ASETO.
	* src/pvm.jitter (aseto): Define.

2019-12-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_cast): Detect invalid casts,
	and diagnose them.
	* testsuite/poke.pkl/cast-struct-diag-1.pk: New test.
	* testsuite/poke.pkl/cast-offsets-diag-2.pk: Likewise.
	* testsuite/poke.pkl/cast-offsets-diag-1.pk: Likewise.
	* testsuite/poke.pkl/cast-str-diag-1.pk: Likewise.
	* testsuite/poke.pkl/cast-struct-diag-2.pk: Likewise.

2019-12-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-fold.c: Define cdivo semantic routines for UUU and III
	cases.
	(pkl_fold_cdiv): Fold /^ operations on offsets.

2019-12-05  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/offset-arg-1.pk: New test.
	* testsuite/poke.pkl/offset-arg-2.pk: Likewise.

2019-12-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-fold.c: Define pkl_fold_gcd using gnulib's <gcd.c.>
	(EMUL_UUU): Define for gcd.
	(pkl_fold_gcd): Define handler.
	(pkl_phase_fold): Register handler.
	(OP_BINARY_OOI): Make sure operands are offsets
	before accessing their magnitude/units.
	(OP_BINARY_OOO): Likewise.
	(OP_BINARY_OOI): Fix handling of base_type.

	* src/pkl-promo.c (promote_offset): Support non-integer units.
	(pkl_promo_ps_op_div): Adjust to new API.
	(pkl_promo_ps_op_add_sub_mod): Likewise.
	(pkl_promo_ps_op_mul): Likewise.
	(pkl_promo_ps_op_rela): Likewise.
	(pkl_promo_ps_type_array): Likewise.
	(pkl_promo_ps_ass_stmt): Likewise.
	(pkl_promo_ps_funcall): Likewise.
	(pkl_promo_ps_return_stmt): Likewise.
	(pkl_promo_ps_func_arg): Likewise.
	(pkl_promo_ps_map): Likewise.
	(pkl_promo_ps_struct_type_field): Likewise.
	(pkl_promo_ps_op_in): Likewise.